* update Notation view after second move animation in Comp mode - done  * show full Notation list after screen resume (it showed list truncated by current move notation) - fixed  * comp makes extra move after restore - fixed  * do not make extra comp moves by Notations navigator - fixes  * keep Prev/Next move and Notation navigator in sync - done  * Ticket #704 Chess.com v3: keep Comp game in sync - restore board and engine state after resume when user navigated moves back - fixed